--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Companies#index</h1>
+<h1>Durchbruch-Liste</h1>
 <p>Find me in app/views/companies/index.html.erb</p>
+
+<h2>Die Durchbruch-Liste, 2017</h2>
+<p>more than $5mm gross profit (roughly revenue minus cost of goods sold) in 2017, not run rate. likely to 8x by 2020. defensible. if not monetizing yet, based on public comparables (biased source: investors)</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Notes</th>
+      <th>Product</th>
+      <th>Stage</th>
+      <th>Tags</th>
+      <th>Investors</th>
+      <th>Location</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @companies.each do |c|%>
+      <tr>
+        <td data-label="Company"><%= c.name %></td>
+        <td data-label="Notes"><%= c.notes %></td>
+        <td data-label="Product"><%= c.product %></td>
+        <td data-label="Stage"><%= c.stage %></td>
+        <td data-label="Tags"></td>
+        <td data-label="Investors"><%= c.investors %></td>
+        <td data-label="Location"><%= c.location %></td>
+      </tr>
+    <% end %>
+  </tbody>
+
+</table>
