--- a/app/views/companies/_table.html.erb
+++ b/app/views/companies/_table.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -17,7 +17,7 @@
         <td data-label="Notes"><%= c.notes %></td>
         <td data-label="Product"><%= c.product %></td>
         <td data-label="Stage"><%= c.stage %></td>
-        <td data-label="Tags"></td>
+        <td data-label="Tags"><%= c.tag %></td>
         <td data-label="Investors"><%= c.investors %></td>
         <td data-label="Location"><%= c.location %></td>
       </tr>
