--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -3,15 +3,15 @@
 
 <h2>Die Durchbruch-Liste, 2017</h2>
 <p>more than $5mm gross profit (roughly revenue minus cost of goods sold) in 2017, not run rate. likely to 8x by 2020. defensible. if not monetizing yet, based on public comparables (biased source: investors)</p>
-<%= render partial: "table", locals: {companies: @companies.where(stage: "Early")} %>
+<%= render partial: "table", locals: {companies: @companies.where(tag: "Breakout")} %>
 
 <h2>Future Breakouts 2017</h2>
 <p>Companies where data makes us expect they will be on the 2018 Breakout List</p>
-<%= render partial: "table", locals: {companies: @companies} %>
+<%= render partial: "table", locals: {companies: @companies.where(tag: "Future Breakout")} %>
 
 <h2>Foundational List 2017</h2>
 <p>Can be $100bn companies with minimal product changes by 2026.</p>
-<%= render partial: "table", locals: {companies: @companies} %>
+<%= render partial: "table", locals: {companies: @companies.where(tag: "Foundational")} %>
 
 <h2>Resource List</h2>
 <p>Be relentlessly resourceful.</p>
