--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>BreakoutRails</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
+<body class="">
+
+<div class="container">
+  <%= yield %>
+</div>
+
+<%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
